--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "react-app-rewired build && node scripts/postbuild.js",
     "dev": "nodemon --exec yarn serve",
     "daemon": "pm2 start ./bin/http.js --name hope || pm2 restart hope",
-    "test": "eslint ./src && jest --coverage"
+    "test": "jest"
   },
   "jest": {
     "snapshotResolver": "./.scripts/jest-snapshot-resolver.js",
@@ -21,6 +21,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cuid": "^2.1.8",
@@ -28,6 +30,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
+    "mocha": "^9.1.3",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.8",
@@ -36,6 +39,7 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "node-sass": "^4.14.1",
+    "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react": "^16.14.0",
